k8s/infrastructure/controllers/ingess-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
