k8s/infrastructure/controllers/metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
