k8s/infrastructure/controllers/longhorn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.halvorteigen.no
      secretName: longhorn-halvorteigen-tls
  rules:
    - host: longhorn.halvorteigen.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
